crates/test-ui/ui/msg_send_invalid_error3.stderr
error[E0080]: evaluation panicked: error parameter must be either `NSError` or `NSObject`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<objc2_foundation::NSString as objc2::__macros::msg_send::null_error::IsNSError>::IS_NSERROR_COMPATIBLE` failed here
  |
 ::: $WORKSPACE/crates/objc2/src/__macros/msg_send/null_error.rs
  |
  |             panic!("error parameter must be either `NSError` or `NSObject`")
  |             ---------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/crates/objc2/src/__macros/msg_send/null_error.rs
  |
  |         assert!(E::IS_NSERROR_COMPATIBLE);
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn objc2::__macros::msg_send::null_error::encountered_error::<NSString>::{closure#0}`
 --> $RUST/core/src/option.rs
  |
  |             None => f(),
  |                     ^^^
